Fixed compilation of JavaScriptCore with GCC 4.8 on 32-bit platforms https://bugs.webkit.org/show_bug.cgi?id=152923

Patch by Konstantin Tokarev <annulen@yandex.ru> on 2016-01-11
Reviewed by Alex Christensen.

* jit/CallFrameShuffler.h:
(JSC::CallFrameShuffler::assumeCalleeIsCell):

Canonical link: https://commits.webkit.org/171067@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@194861 268f45cc-cd09-0410-ab3c-d52691b4dbfc