Source/JavaScriptCore/jit/CallFrameShuffler.h
@@ -141,7 +141,7 @@ public:
     void assumeCalleeIsCell()
     {
 #if USE(JSVALUE32_64)
-        CachedRecovery& calleeCachedRecovery { *getNew(VirtualRegister(JSStack::Callee)) };
+        CachedRecovery& calleeCachedRecovery = *getNew(VirtualRegister(JSStack::Callee));
         switch (calleeCachedRecovery.recovery().technique()) {
         case InPair:
             updateRecovery(
